--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "封装mini-lodash库",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged",
+    "commitlint": "commitlint --config commitlint.config.js -e -V"
   },
   "author": "tall-xian",
-  "license": "ISC"
+  "license": "MIT",
+  "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.8",
+    "typescript": "^5.5.4"
+  }
 }
